test: implementa testes para a classe PageView.